<resources>
    <string name="app_name">Lesson2_4</string>
    <string name="txtCityName">Moskow</string>
    <string name="txtCityTemperature">+10</string>
    <string name="txtCityWind">100</string>
    <string name="txtCelsius">℃</string>
    <string name="txtCityTemperatureName">Temperature </string>
    <string name="txtCityWindMane">Wind</string>
    <string name="cityNameEnter">Moskow</string>
    <string name="selectCityName">Enter City Name</string>
    <string name="btnSelectCity">OK</string>
    <string name="isPressure">Pressure</string>
    <string name="isWind">Wind</string>
    <string name="valuePressure">760</string>
    <string name="pressureName">Pressure</string>
    <string-array name="city_names">
        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Voronezh</item>
        <item>Yaroslavl</item>
        <item>Samara</item>
    </string-array>

    <string name="textMondayName">Monday</string>
    <string name="textTuesdayName">Tuesday</string>
    <string name="textWednesdayName">Wednesday</string>
    <string name="textThursdayName">Thursday</string>
    <string name="textFridayName">Friday</string>
    <string name="textSaturdayName">Saturday</string>
    <string name="textSundayName">Sunday</string>
    <string name="hintCity">City</string>
    <string name="inputMessage">Enter city</string>
    <string name="weekWeatherTitle">Weather of week</string>
    <string name="action_settings">Settings</string>
    <string name="curCitiWeather">Weather</string>

    <string-array name="week_Name">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Dark Theme</string>
    <string name="item4">Item4</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather Studio</string>
    <string name="nav_header_subtitle">GeekBrains lessons</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Select City</string>
    <string name="menu_gallery">Show Weather</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>

    <string name="swTheme">Dark Theme</string>

    <string name="warning_message">Ошибка получения данных, город </string>
    <string name="exclamation">Ошибка сервера погоды</string>
    <string name="press_button">Выберите другой город или проверьте соединение.</string>
    <string name="button_yes">Да</string>
    <string name="button_no">нет</string>

</resources>
