<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_selectCity"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_showCitiesWeather"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

    </group>


    <item
            android:id="@+id/nav_switch"
            app:actionLayout="@layout/nav_header_switch"
            android:title="@string/swTheme"/>

</menu>