<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/weather_main" />

    <TextView
        android:id="@+id/cityTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCityTemperature"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cityWind"
        app:layout_constraintEnd_toStartOf="@+id/txtCelsius"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/txtTemperatureName"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCityName"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cityTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/txtCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCelsius"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cityTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cityTemperature"
        app:layout_constraintTop_toTopOf="@+id/cityTemperature" />

    <TextView
        android:id="@+id/txtTemperatureName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10sp"
        android:text="@string/txtCityTemperatureName"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/cityTemperature"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cityTemperature" />

    <TextView
        android:id="@+id/txtWindName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10sp"
        android:text="@string/txtCityWindMane"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/cityWind"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cityWind" />

    <TextView
        android:id="@+id/cityWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCityWind"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtWindName"
        app:layout_constraintTop_toBottomOf="@+id/cityTemperature" />

</androidx.constraintlayout.widget.ConstraintLayout>