<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/separator"
    android:orientation="vertical"
    android:showDividers="middle|beginning|end"
    tools:context=".CitiesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectCityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:text="@string/btnSelectCity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/chkPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingTop="20sp"
            android:paddingEnd="100sp"
            android:text="@string/isPressure" />

        <Switch
            android:id="@+id/chkWind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingTop="20sp"
            android:paddingEnd="100sp"
            android:paddingBottom="20sp"
            android:text="@string/isWind" />
    </LinearLayout>

    <ListView
        android:id="@+id/city_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/city_names" />


</LinearLayout>
